plugins {
    id 'java'
    id 'idea'
    id 'eclipse'

    id 'com.gtnewhorizons.retrofuturagradle' version '1.4.9'
}

group = mod_group_id
version = mod_version

base {
    archivesName = mod_id
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(8)
    }
}

minecraft {
    mcVersion.set(minecraft_version)
    username.set('Developer')
}

tasks.named('processResources').configure {
    def replaceProperties = [
            minecraft_version: minecraft_version,
            mod_id           : mod_id,
            mod_name         : mod_name,
            mod_version      : mod_version,
            mod_authors      : mod_authors,
            mod_description  : mod_description
    ]

    inputs.properties replaceProperties

    filesMatching('mcmod.info') {
        expand replaceProperties
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}